@@ -1056,7 +1056,7 @@ cobc_main_malloc (const size_t size)
 {
 	struct cobc_mem_struct	*m;
 
-	m = calloc ((size_t)1, sizeof(struct cobc_mem_struct) + size);
+	m = calloc ((size_t)1, COBC_MEM_SIZE + size);
 	/* LCOV_EXCL_START */
 	if (unlikely (!m)) {
 		cobc_err_msg (_("cannot allocate %d bytes of memory"),
@@ -1065,7 +1065,7 @@ cobc_main_malloc (const size_t size)
 	}
 	/* LCOV_EXCL_STOP */
 	m->next = cobc_mainmem_base;
-	m->memptr = (char *)m + sizeof (struct cobc_mem_struct);
+	m->memptr = (char *)m + COBC_MEM_SIZE;
 	m->memlen = size;
 	cobc_mainmem_base = m;
 	return m->memptr;
@@ -1116,7 +1116,7 @@ cobc_main_realloc (void *prevptr, const size_t size)
 	struct cobc_mem_struct	*curr;
 	struct cobc_mem_struct	*prev;
 
-	m = calloc ((size_t)1, sizeof(struct cobc_mem_struct) + size);
+	m = calloc ((size_t)1, COBC_MEM_SIZE + size);
 	/* LCOV_EXCL_START */
 	if (unlikely (!m)) {
 		cobc_err_msg (_("cannot allocate %d bytes of memory"),
@@ -1124,7 +1124,7 @@ cobc_main_realloc (void *prevptr, const size_t size)
 		cobc_abort_terminate (0);
 	}
 	/* LCOV_EXCL_STOP */
-	m->memptr = (char *)m + sizeof (struct cobc_mem_struct);
+	m->memptr = (char *)m + COBC_MEM_SIZE;
 	m->memlen = size;
 
 	prev = NULL;
@@ -1192,7 +1192,7 @@ cobc_parse_malloc (const size_t size)
 {
 	struct cobc_mem_struct	*m;
 
-	m = calloc ((size_t)1, sizeof(struct cobc_mem_struct) + size);
+	m = calloc ((size_t)1, COBC_MEM_SIZE + size);
 	/* LCOV_EXCL_START */
 	if (unlikely (!m)) {
 		cobc_err_msg (_("cannot allocate %d bytes of memory"),
@@ -1201,7 +1201,7 @@ cobc_parse_malloc (const size_t size)
 	}
 	/* LCOV_EXCL_STOP */
 	m->next = cobc_parsemem_base;
-	m->memptr = (char *)m + sizeof(struct cobc_mem_struct);
+	m->memptr = (char *)m + COBC_MEM_SIZE;
 	m->memlen = size;
 	cobc_parsemem_base = m;
 	return m->memptr;
@@ -1232,7 +1232,7 @@ cobc_parse_realloc (void *prevptr, const size_t size)
 	struct cobc_mem_struct	*curr;
 	struct cobc_mem_struct	*prev;
 
-	m = calloc ((size_t)1, sizeof(struct cobc_mem_struct) + size);
+	m = calloc ((size_t)1, COBC_MEM_SIZE + size);
 	/* LCOV_EXCL_START */
 	if (unlikely (!m)) {
 		cobc_err_msg (_("cannot allocate %d bytes of memory"),
@@ -1240,7 +1240,7 @@ cobc_parse_realloc (void *prevptr, const size_t size)
 		cobc_abort_terminate (0);
 	}
 	/* LCOV_EXCL_STOP */
-	m->memptr = (char *)m + sizeof(struct cobc_mem_struct);
+	m->memptr = (char *)m + COBC_MEM_SIZE;
 	m->memlen = size;
 
 	prev = NULL;
@@ -1308,7 +1308,7 @@ cobc_plex_malloc (const size_t size)
 {
 	struct cobc_mem_struct	*m;
 
-	m = calloc ((size_t)1, sizeof(struct cobc_mem_struct) + size);
+	m = calloc ((size_t)1, COBC_MEM_SIZE + size);
 	/* LCOV_EXCL_START */
 	if (unlikely (!m)) {
 		cobc_err_msg (_("cannot allocate %d bytes of memory"),
@@ -1316,7 +1316,7 @@ cobc_plex_malloc (const size_t size)
 		cobc_abort_terminate (0);
 	}
 	/* LCOV_EXCL_STOP */
-	m->memptr = (char *)m + sizeof (struct cobc_mem_struct);
+	m->memptr = (char *)m + COBC_MEM_SIZE;
 	m->next = cobc_plexmem_base;
 	cobc_plexmem_base = m;
 	return m->memptr;
