@@ -1,4 +1,11 @@
 
+2019-09-15  Ron Norman <rjn@inglenet.com>
+
+	* cobc.h: Add COB_MEM_SIZE as size of cob_mem_struct rounded up to
+	          multiple of sizeof(long long)
+	* cobc.c: Use COB_MEM_SIZE as size of cob_mem_struct
+	          To avoid aborts on system that requires aligned data
+
 2019-09-09  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c: Emit attributes and/or pragma to align 01/77 fields on
